--- a/app/src/main/res/layout/fragment_mypage.xml
+++ b/app/src/main/res/layout/fragment_mypage.xml
@@ -152,7 +152,6 @@
             android:layout_marginBottom="240dp"
             android:background="@color/_bg__intro_ek2_color"
             android:gravity="top"
-            app:layout_constraintBottom_toTopOf="@+id/iv_main"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
@@ -384,37 +383,39 @@
             android:layout_width="210dp"
             android:layout_height="1dp"
             android:layout_marginStart="64dp"
-            android:layout_marginTop="396dp"
+            android:layout_marginTop="410dp"
             android:background="@drawable/line_5_shape"
+            app:layout_constraintBottom_toTopOf="@+id/recyclerView1"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.39" />
 
         <TextView
+            android:id="@+id/textView"
             android:layout_width="130.5dp"
             android:layout_height="38.5dp"
-            android:layout_marginTop="28dp"
+            android:layout_marginTop="68dp"
             android:text="My Expenditure"
             android:textColor="@color/babygage_color"
             android:textSize="12dp"
             android:textStyle="italic"
-            app:layout_constraintBottom_toTopOf="@+id/rectangle_33"
+            app:layout_constraintBottom_toTopOf="@+id/recyclerView1"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.242"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/vector_ek29"
-            app:layout_constraintVertical_bias="0.725" />
+            app:layout_constraintVertical_bias="1.0" />
 
         <com.google.android.material.button.MaterialButtonToggleGroup
             android:id="@+id/toggleButton"
 
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="13dp"
-            app:layout_constraintBottom_toTopOf="@+id/recyclerView1"
+            android:layout_marginTop="10dp"
+            app:layout_constraintBottom_toTopOf="@+id/textView"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/vector_ek29"
-            app:layout_constraintVertical_bias="1.0"
             app:selectionRequired="true"
             app:singleSelection="true">
 
@@ -441,8 +442,8 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerView1"
             android:layout_width="413dp"
-            android:layout_height="345dp"
-            android:layout_marginBottom="76dp"
+            android:layout_height="300dp"
+            android:layout_marginBottom="156dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/my_expenditure___household_ledger"
