--- a/app/src/main/res/layout/activity_financial_mypage.xml
+++ b/app/src/main/res/layout/activity_financial_mypage.xml
@@ -56,9 +56,10 @@
 
 
     <TextView
-        android:id="@+id/household_my"
+        android:id="@+id/financial_my"
         android:layout_width="177.5dp"
         android:layout_marginTop="20dp"
+
         android:layout_height="41.5dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
@@ -210,7 +211,7 @@
             </LinearLayout>
         </LinearLayout>
         <TextView
-            android:id="@+id/household_my2"
+            android:id="@+id/financial_my2"
             android:layout_width="177.5dp"
             android:layout_height="30.5dp"
             android:layout_below="@+id/lin"
