--- a/app/src/main/res/layout/fragment_financialmain.xml
+++ b/app/src/main/res/layout/fragment_financialmain.xml
@@ -134,6 +134,15 @@
                     app:layout_constraintTop_toBottomOf="@+id/detailBox"
                     app:layout_constraintVertical_bias="0.747" />
 
+                <TextView
+                    android:id="@+id/expenditure"
+                    android:layout_width="0dp"
+                    android:layout_height="0dp"
+                    app:layout_constraintBottom_toBottomOf="@+id/detailBox"
+                    app:layout_constraintEnd_toEndOf="@+id/detailBox"
+                    app:layout_constraintStart_toStartOf="@+id/detailBox"
+                    app:layout_constraintTop_toTopOf="@+id/detailBox" />
+
             </androidx.constraintlayout.widget.ConstraintLayout>
         </ScrollView>
 
