--- a/app/src/main/res/layout/fragment_householdmain.xml
+++ b/app/src/main/res/layout/fragment_householdmain.xml
@@ -260,6 +260,16 @@
                     app:layout_constraintTop_toBottomOf="@+id/detailBox2"
                     app:layout_constraintVertical_bias="0.656" />
 
+                <TextView
+                    android:id="@+id/expenditure"
+                    android:layout_width="0dp"
+                    android:layout_height="30dp"
+                    android:layout_marginStart="20dp"
+                    app:layout_constraintBottom_toBottomOf="@+id/detailBox"
+                    app:layout_constraintEnd_toEndOf="@+id/detailBox"
+                    app:layout_constraintStart_toStartOf="@+id/detailBox"
+                    app:layout_constraintTop_toTopOf="@+id/detailBox" />
+
             </androidx.constraintlayout.widget.ConstraintLayout>
         </ScrollView>
 
