--- a/app/src/main/res/layout/fragment_mypage.xml
+++ b/app/src/main/res/layout/fragment_mypage.xml
@@ -439,7 +439,7 @@
             android:id="@+id/household_total"
             android:layout_width="match_parent"
             android:layout_height="70dp"
-            android:layout_marginTop="4dp"
+            android:layout_marginTop="24dp"
             android:background="@drawable/rectangle_4_shape"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
@@ -450,14 +450,12 @@
             android:id="@+id/financial_total"
             android:layout_width="match_parent"
             android:layout_height="70dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginBottom="76dp"
+            android:layout_marginTop="24dp"
             android:background="@drawable/rectangle_4_ek1_shape"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/household_total" />
+            app:layout_constraintTop_toBottomOf="@+id/textView" />
 
         <TextView
             android:id="@+id/household_expenditure"
