--- a/app/src/main/res/layout/activity_householdmain.xml
+++ b/app/src/main/res/layout/activity_householdmain.xml
@@ -109,30 +109,16 @@
             tools:layout_editor_absoluteX="16dp"
             tools:layout_editor_absoluteY="2dp">
 
-            <TextView
-                android:id="@+id/babygage"
-                android:layout_width="127dp"
-                android:layout_height="40dp"
-                android:layout_gravity="center_horizontal|center"
-                android:fontFamily="monospace"
-                android:gravity="center"
-                android:text="BABYGAGE"
-                android:textColor="@color/babygage_color"
-                android:textSize="20sp"
-                app:layout_constraintBottom_toBottomOf="@+id/toolbar"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
             <ImageView
-                android:id="@+id/logo"
-                android:layout_width="62dp"
-                android:layout_height="53dp"
+                android:id="@+id/imageView"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 app:layout_constraintBottom_toBottomOf="@+id/toolbar"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toEndOf="@+id/babygage_ek10"
                 app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/logo" />
+                app:srcCompat="@drawable/unibudget" />
         </LinearLayout>
     </androidx.appcompat.widget.Toolbar>
 
