--- a/app/src/main/res/layout/activity_importimage.xml
+++ b/app/src/main/res/layout/activity_importimage.xml
@@ -28,31 +28,6 @@
             tools:layout_editor_absoluteX="16dp"
             tools:layout_editor_absoluteY="2dp">
 
-            <TextView
-                android:id="@+id/babygage_ek10"
-                android:layout_width="124dp"
-                android:layout_height="40dp"
-                android:layout_gravity="center_horizontal|center"
-
-                android:fontFamily="monospace"
-                android:gravity="center"
-                android:text="BABYGAGE"
-                android:textColor="@color/babygage_color"
-                android:textSize="20sp"
-                app:layout_constraintBottom_toBottomOf="@+id/toolbar"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <ImageView
-                android:id="@+id/imageView"
-                android:layout_width="62dp"
-                android:layout_height="53dp"
-                app:layout_constraintBottom_toBottomOf="@+id/toolbar"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toEndOf="@+id/babygage_ek10"
-                app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/logo" />
         </LinearLayout>
     </androidx.appcompat.widget.Toolbar>
 
@@ -140,5 +115,5 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="1.0"
-        app:srcCompat="@drawable/logo" />
+        app:srcCompat="@drawable/unibudget" />
 </androidx.constraintlayout.widget.ConstraintLayout>
