--- a/app/src/main/res/layout/activity_test.xml
+++ b/app/src/main/res/layout/activity_test.xml
@@ -34,31 +34,7 @@
             tools:layout_editor_absoluteX="16dp"
             tools:layout_editor_absoluteY="2dp">
 
-            <TextView
-                android:id="@+id/babygage_ek10"
-                android:layout_width="124dp"
-                android:layout_height="40dp"
-                android:layout_gravity="center_horizontal|center"
 
-                android:fontFamily="monospace"
-                android:gravity="center"
-                android:text="BABYGAGE"
-                android:textColor="@color/babygage_color"
-                android:textSize="20sp"
-                app:layout_constraintBottom_toBottomOf="@+id/toolbar"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <ImageView
-                android:id="@+id/imageView"
-                android:layout_width="62dp"
-                android:layout_height="53dp"
-                app:layout_constraintBottom_toBottomOf="@+id/toolbar"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toEndOf="@+id/babygage_ek10"
-                app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/logo" />
         </LinearLayout>
     </androidx.appcompat.widget.Toolbar>
 
@@ -71,7 +47,7 @@
         android:background="#5CFFFFFF"
         android:visibility="visible"
         app:layout_constraintVertical_bias="1.0"
-        app:srcCompat="@drawable/logo" />
+        app:srcCompat="@drawable/unibudget" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/camera"
